[gd_scene load_steps=2 format=3 uid="uid://death_screen_001"]

[ext_resource type="Script" path="res://scripts/death_screen.gd" id="1"]

[node name="DeathScreen" type="CanvasLayer"]
process_mode = 3
visible = false
script = ExtResource("1")

[node name="Overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0, 0, 0.9)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2
custom_minimum_size = Vector2(600, 500)

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 56
text = "üíÄ YOU DIED üíÄ"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="CenterContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="StatsTitle" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 28
text = "YOUR STATS"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="CenterContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="StatsContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TimeContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer/StatsContainer"]
layout_mode = 2

[node name="TimeLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/StatsContainer/TimeContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 22
text = "‚è± Time Survived:"

[node name="TimeValue" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.8, 1, 1)
theme_override_font_sizes/font_size = 22
text = "00:00"
horizontal_alignment = 2

[node name="LevelContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer/StatsContainer"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/StatsContainer/LevelContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 22
text = "‚¨Ü Level Reached:"

[node name="LevelValue" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 22
text = "1"
horizontal_alignment = 2

[node name="KillsContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer/StatsContainer"]
layout_mode = 2

[node name="KillsLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/StatsContainer/KillsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 22
text = "üíÄ Total Kills:"

[node name="KillsValue" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 22
text = "0"
horizontal_alignment = 2

[node name="DamageContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer/StatsContainer"]
layout_mode = 2

[node name="DamageLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/StatsContainer/DamageContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 22
text = "üí• Damage Dealt:"

[node name="DamageValue" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.7, 0.2, 1)
theme_override_font_sizes/font_size = 22
text = "0"
horizontal_alignment = 2

[node name="XPContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer/StatsContainer"]
layout_mode = 2

[node name="XPLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/StatsContainer/XPContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 22
text = "‚≠ê Total XP:"

[node name="XPValue" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.3, 1)
theme_override_font_sizes/font_size = 22
text = "0"
horizontal_alignment = 2

[node name="Spacer4" type="Control" parent="CenterContainer/PanelContainer/VBoxContainer/StatsContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="SkillPointsContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer/StatsContainer"]
layout_mode = 2

[node name="SkillPointsLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/StatsContainer/SkillPointsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 22
text = "üå≥ Skill Points Earned:"

[node name="SkillPointsValue" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 1, 0.8, 1)
theme_override_font_sizes/font_size = 22
text = "0"
horizontal_alignment = 2

[node name="Spacer3" type="Control" parent="CenterContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="RestartButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
theme_override_font_sizes/font_size = 24
text = "üîÑ RESTART"

[node name="QuitButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 24
text = "‚ùå QUIT"
